--- a/LungTrackerWeb/src/app/login/login.component.html
+++ b/LungTrackerWeb/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login">
     <div fxLayout="column"  class="form-div" style="width: 100%;">
         <h1 class="welcome-text">Acceso personal investigador</h1>
-        <h2 class="light-text">Estás accediendo a la área de consulta de los investigadores</h2>
+        <h2 class="light-text">Estás accediendo al área de consulta de los investigadores</h2>
         <form method="post">
             <mat-form-field class="form-item" appearance="outline" >
                 <mat-label>Email</mat-label>
