--- a/LungTrackerWeb/src/app/lung-form/lung-form.component.html
+++ b/LungTrackerWeb/src/app/lung-form/lung-form.component.html
@@ -2,6 +2,13 @@
     <div style="width: 100%; height: 300px; background-color: #C9D3DD;" fxLayout="column" fxLayoutAlign="center center" >
         <h1 class="welcome-text">Bienvenido al formulario de LungTracker</h1>
         <h2 class="light-text">Estás a punto de ayudar en la lucha contra el cáncer de pulmón!</h2>
+        <img
+            width="50px"
+            alt="Lung Tracker Logo"
+            src="assets/images/second_lung_form-trimmy.png"  />
+    </div>
+    <div class="half-circle">
+
     </div>
     <div fxLayout="column" style="width: 100%; margin-top: 50px; font-size: 16px;">
         <span style="margin-left: 10%;">Antes de empezar, nos gustaría que leyeras las siguientes afirmaciones y marques las casillas si estás de acuerdo:</span>
