--- a/LungTrackerWeb/src/app/home/home.component.css
+++ b/LungTrackerWeb/src/app/home/home.component.css
@@ -125,7 +125,7 @@ span {
 }
 
 .paint_line {
-    background-color: rgb(186, 112, 255);
+    background-color: lavender;
 }
 
 #checkbox {
@@ -164,6 +164,292 @@ var {
     .list-object {
         margin-top: 50px;
     }
+}
+
+.main-button {
+    color: white;
+    font-size: 22px;
+    cursor: pointer;
+    height: 60px;
+    width: 200px;
+    margin: 50px 50px 70px 50px;
+    padding: 16px;
+    text-align: center;
+    line-height: 50px;
+}
+
+.welcome-text {
+    font-size: 35px !important;
+}
+
+.half-circle {
+    background-color: #e6e6fa;
+    width: 100%;
+    height: 60px;
+    border-bottom-left-radius: 40%;
+    border-bottom-right-radius: 40%;
+}
+
+.suggest-button {
+    background-color: black;
+    color: white;
+    width: 100px;
+}
+
+.info-text {
+    color: black;
+}
+
+.big-numbers{
+    font-size: 45px;
+    font-weight: 300;
+}
+
+.numbers-div {
+    margin-top: 50px;
+}
+
+.padding-text {
+    padding-top: 5px;
+}
+
+@keyframes float {
+	0% {
+		/* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
+		transform: translatey(0px);
+	}
+	50% {
+		/* box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2); */
+		transform: translatey(-20px);
+	}
+	100% {
+		/* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
+		transform: translatey(0px);
+	}
+}
+
+@keyframes grow-shadow {
+	0% {
+		/* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
+		width: 100px;
+	}
+	50% {
+		/* box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2); */
+		width: 120px;
+	}
+	100% {
+		/* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
+		width: 100px;
+	}
+}
+
+.main-icon {
+    animation: float 6s ease-in-out infinite;
+}
+
+.shadow {
+    background-color: #CDCDF5;
+    width: 100px;
+    height: 25px;
+    border-radius: 50%;
+    animation: grow-shadow 6s ease-in-out infinite;
+}
+
+.rr-icon {
+    transition: all .2s ease-in-out;
+}
+
+.rr-icon:hover {
+    color: #9C6ADF;
+    transform: scale(1.1);
+}
+
+.ba {
+    border-style: solid;
+    border-width: 1px;
+}
+
+.br-pill {
+    border-radius: 9999px;
+}
+
+.bw1 {
+    border-width: .125rem;
+}
+
+.bw2 {
+    border-width: .25rem;
+}
+
+.dib {
+    display: inline-block;
+}
+
+.fw6 {
+    font-weight: 600;
+}
+
+.tracked {
+    letter-spacing: .1em;
+}
+
+.link {
+    text-decoration: none;
+    transition: color .15s ease-in;
+}
+
+.link:link, .link:visited {
+    transition: color .15s ease-in;
+}
+
+.link:hover {
+    transition: color .15s ease-in;
+}
+
+.link:active {
+    transition: color .15s ease-in;
+}
+
+.link:focus {
+    transition: color .15s ease-in;
+    outline: 1px dotted currentColor;
+}
+
+.black {
+    color: #000;
+}
+
+.near-black {
+    color: #111;
+}
+
+.dark-gray {
+    color: #333;
+}
+
+.mid-gray {
+    color: #555;
+}
+
+.white {
+    color: #fff;
+}
+
+.purple {
+    color: #5e2ca5;
+}
+
+.light-purple {
+    color: #a463f2;
+}
+
+.dark-pink {
+    color: #d5008f;
+}
+
+.hot-pink {
+    color: #ff41b4;
+}
+
+.dark-green {
+    color: #137752;
+}
+
+.navy {
+    color: #001b44;
+}
+
+.dark-blue {
+    color: #00449e;
+}
+
+.bg-black {
+    background-color: #000;
+}
+
+.bg-near-black {
+    background-color: #111;
+}
+
+.bg-dark-gray {
+    background-color: #333;
+}
+
+.bg-mid-gray {
+    background-color: #555;
+}
+
+.bg-purple {
+    background-color: #5e2ca5;
+}
+
+.bg-light-purple {
+    background-color: #a463f2;
+}
+
+.bg-dark-pink {
+    background-color: #d5008f;
+}
+
+.bg-hot-pink {
+    background-color: #ff41b4;
+}
+
+.bg-dark-green {
+    background-color: #137752;
+}
+
+.bg-navy {
+    background-color: #001b44;
+}
+
+.bg-dark-blue {
+    background-color: #00449e;
+}
+
+.pv2 {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+}
+
+.ph3 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.mb2 {
+    margin-bottom: .5rem;
+}
+
+.mb4 {
+    margin-bottom: 2rem;
+}
+
+.mt4 {
+    margin-top: 2rem;
+}
+
+.ttu {
+    text-transform: uppercase;
+}
+
+.f6 {
+    font-size: .875rem;
+}
+
+.dim {
+    opacity: 1;
+    transition: opacity .15s ease-in;
+}
+
+.dim:hover, .dim:focus {
+    opacity: .5;
+    transition: opacity .15s ease-in;
+}
+
+.dim:active {
+    opacity: .8;
+    transition: opacity .15s ease-out;
 }
 
 
