--- a/LungTrackerWeb/src/app/researcher/researcher.component.html
+++ b/LungTrackerWeb/src/app/researcher/researcher.component.html
@@ -14,7 +14,9 @@
         <chart *ngIf="showGraphs[2]" class="dashchart" [type]="typeMutations" [data]="dataMutations"
         [options]="optionsMutations"></chart>
     </div>
-
+  <!--  <button>
+        <a class="btn btn-clear" title="Download JSON" [href]="downloadJsonHref" download="download.json"></a>
+    </button>-->
 
     <h3> La siguiente tabla detalla todas las encuestas realizadas.</h3>
     <ng-container >
