Add maximum puntuation at home component

--- a/LungTrackerWeb/src/app/home/home.component.html
+++ b/LungTrackerWeb/src/app/home/home.component.html
@@ -121,7 +121,7 @@
     <div fxLayout="column" fxLayoutAlign.lt-md="center center">
       <span class="info-text" >Los usuarios han valorado el sistema con un:</span>
       <div fxLayout="row" fxLayoutAlign="center center"  class="numbers-div">
-        <span class="info-text big-numbers padding-text">{{avgSuggestMark}}</span>
+        <span class="info-text big-numbers padding-text" style="padding-top: 20px;">{{avgSuggestMark}}<span style="font-size: 25px;" class="info-text big-numbers padding-text">/5</span></span>
         <mat-icon class="big-numbers" style="color: #CDCDF5">star</mat-icon>
       </div>
       
